[package]
name = "nt-be"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
near-api = "0.8"
near-account-id = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
moka = { version = "0.12", features = ["future"] }
base64 = "0.22"
serde_with = { version = "3.16.1", features = ["base64"] }
chrono = "0.4"
futures = "0.3"
lazy_static = "1.4"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
    "bigdecimal",
] }
bigdecimal = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
env_logger = "0.11"
log = "0.4"
near-jsonrpc-client = "0.20.0"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
reqwest = { version = "0.12", features = ["json"] }
